--- a/index.html
+++ b/index.html
@@ -18,16 +18,24 @@
 
   <div id='legend-filter'>
     <div>
-      <button type="button" class='park-button'>Park Proximity</button>
-      <div class='legend-vals' id='park-legend-vals'></div>
+
     </div>
     <div>
-      <button type="button" class='subway-button'>Transit Station Proximity</button>
-      <div class='legend-vals' id='subway-legend-vals'></div>
+
     </div>
     <div>
-      <button type="button" class='both-button'>Both</button>
-      <div class='legend-vals' id='both-legend-vals'></div>
+      <div id='buttons'>
+        <button type="button" class='both-button'>Both</button><br>
+        <button type="button" class='subway-button'>Transit Station Proximity</button><br>
+        <button type="button" class='park-button'>Park Proximity</button>
+      </div>
+      </div>
+      <div id='both-legend-vals'>
+        <div id='park-both'></div>
+        <div id='subway-both'></div>
+        <div class='legend-vals' id='park-legend-vals'></div>
+        <div class='legend-vals' id='subway-legend-vals'></div>
+      </div>
     </div>
   </div>
 
