made percentages visible in 2D legend

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           Railroad, or Staten Island Railway
         </p><br><br>
         <p class='map-intro-subheading'>How to use this map</p>
-        <p>Click on the buttons below to show, hide and layer the data on the map. Then hover over each district on the map
-        to see its name and exact percentage.</p><br>
+        <p>Click the buttons on the map to show the data distributions either individually or both layered at once. 
+          Then hover over each district on the map to see its name and exact numbers.</p><br>
       </div>
     </div>
 
