deleted variables, divs not in use; tweaked pos of % vals

--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
 <body>
   <div id='legend-filter'>
     <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
       <div id='buttons'>
         <button type="button" class='both-button'>Both</button><br>
         <button type="button" class='subway-button'>Transit Station Proximity</button><br>
         <button type="button" class='park-button'>Park Proximity</button>
       </div>
-      </div>
+    </div>
       <div id='both-legend-vals'>
         <div id='park-both'></div>
         <div id='subway-both'></div>
@@ -39,7 +33,6 @@
       <div id='subway-words-both-legend'>STATION</div>
       <div id='park-words-both-legend'>PARK</div>
     </div>
-  </div>
 
   <div class='container'>
 
@@ -61,7 +54,7 @@
         </p><br><br>
         <p class='map-intro-subheading'>How to use this map</p>
         <p>Click the buttons on the map to show the data distributions either individually or both layered at once.
-          Then hover over each district on the map to see its name and exact numbers.</p><br>
+          Then hover over each district on the map to see its name and exact numbers.</p>
       </div>
     </div>
 
