matched font color in side bar to legend

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <a target="_blank" rel="noopener noreferrer"
           href="https://furmancenter.org/coredata/userguide/data-downloads">CoreData.nyc
           </a>. At the Community District level, this map shows:<br><br>
-          <u>Park Proximity</u><br>The percentage of residential units that are within a quarter mile of a park<br><br>
-          <u>Transit Station Proximity</u><br>The percentage of residential units that are within a half mile walk of
+          <span style='background-color: #ea4c46; color: white;'>Transit Station Proximity</span><br>The percentage of residential units that are within a half mile walk of
           a station entrance for the New York City Subway, Long Island Rail Road, PATH, Amtrak, Metro-North
-          Railroad, or Staten Island Railway
+          Railroad, or Staten Island Railway<br><br>
+          <span style='background-color: #4949ff; color: white;'>Park Proximity</span><br>The percentage of residential units that are within a quarter mile of a park
         </p><br><br>
         <p class='map-intro-subheading'>How to use this map</p>
         <p>Click the buttons on the map to show the data distributions either individually or both layered at once.
